Improve vesc can.
Signed-off-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/elm4/prj.conf
+++ b/app/elm4/prj.conf
@@ -1,5 +1,4 @@
-CONFIG_CEREBRI_APP_NAME="elm4"
-CONFIG_CEREBRI_CORE_COMMON=y
+CONFIG_CEREBRI_APP_NAME="elm4" CONFIG_CEREBRI_CORE_COMMON=y
 CONFIG_CEREBRI_CORE_COMMON_BOOT_BANNER=y
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY=n
 CONFIG_CEREBRI_SENSE_IMU=y
