Switch baro to zros.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/b3rb/prj.conf
+++ b/app/b3rb/prj.conf
@@ -8,6 +8,7 @@ CONFIG_CEREBRI_ACTUATE_LED_ARRAY=y
 CONFIG_CEREBRI_ACTUATE_SOUND=y
 CONFIG_CEREBRI_CORE_COMMON=y
 CONFIG_CEREBRI_CORE_COMMON_BOOT_BANNER=y
+CONFIG_CEREBRI_SENSE_BARO=y
 CONFIG_CEREBRI_SENSE_IMU=y
 CONFIG_CEREBRI_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY=y
@@ -39,7 +40,6 @@ CONFIG_NEWLIB_LIBC=y
 CONFIG_MAIN_THREAD_PRIORITY=5
 CONFIG_SYSTEM_WORKQUEUE_PRIORITY=-2
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=10000
-
 # Networking config
 CONFIG_NET_SHELL=y
 CONFIG_NETWORKING=y
