--- a/app/elm4/prj.conf
+++ b/app/elm4/prj.conf
@@ -1,6 +1,7 @@
 CONFIG_CEREBRI_APP_NAME="elm4" CONFIG_CEREBRI_CORE_COMMON=y
 CONFIG_CEREBRI_CORE_COMMON_BOOT_BANNER=y
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY=n
+CONFIG_CEREBRI_SENSE_BARO=y
 CONFIG_CEREBRI_SENSE_IMU=y
 CONFIG_CEREBRI_SENSE_MAG=y
 CONFIG_CEREBRI_SYNAPSE_TOPIC=y
