--- a/app/b3rb/boards/native_sim.conf
+++ b/app/b3rb/boards/native_sim.conf
@@ -11,7 +11,11 @@ CONFIG_CEREBRI_BOOT_BANNER=n
 CONFIG_CEREBRI_DREAM_SIL=y
 CONFIG_UBXLIB=n
 
+CONFIG_ASAN=n
+CONFIG_UBSAN=n
+
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=n
+CONFIG_CEREBRI_SENSE_POWER=n
 CONFIG_CEREBRI_SENSE_IMU=n
 CONFIG_CEREBRI_SENSE_BARO=n
 CONFIG_CEREBRI_SENSE_MAG=n
