--- a/app/b3rb/prj.conf
+++ b/app/b3rb/prj.conf
@@ -3,31 +3,55 @@ CONFIG_CEREBRI_APP_NAME="b3rb"
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=10000
 CONFIG_TICKLESS_KERNEL=n
 
+CONFIG_CEREBRI_DREAM_SIL=n
+
+CONFIG_CEREBRI_B3RB_ESTIMATE=y
+CONFIG_CEREBRI_B3RB_FSM=y
+CONFIG_CEREBRI_B3RB_MANUAL=y
+CONFIG_CEREBRI_B3RB_MIXING=y
+CONFIG_CEREBRI_B3RB_POSITION=y
+CONFIG_CEREBRI_B3RB_VELOCITY=y
+CONFIG_CEREBRI_B3RB_LIGHTING=y
+CONFIG_CEREBRI_B3RB_CASADI=y
+
 CONFIG_CEREBRI_ACTUATE_PWM=y
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=y
 CONFIG_CEREBRI_ACTUATE_SOUND=y
-CONFIG_CEREBRI_CORE_COMMON=y
-CONFIG_CEREBRI_CORE_COMMON_BOOT_BANNER=y
-CONFIG_CEREBRI_SENSE_BARO=n
+
+CONFIG_NET_BUF_RX_COUNT=24
+CONFIG_NET_PKT_RX_COUNT=24
+CONFIG_ETH_NXP_S32_RX_RING_LEN=16
+
+CONFIG_CEREBRI_SENSE_POWER=y
+CONFIG_CEREBRI_SENSE_SAFETY=y
 CONFIG_CEREBRI_SENSE_IMU=y
 CONFIG_CEREBRI_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY=y
-CONFIG_CEREBRI_SENSE_UBX_GNSS=y
+CONFIG_CEREBRI_SENSE_UBX_GNSS=n
+
 CONFIG_CEREBRI_SYNAPSE_ETHERNET=y
+
 CONFIG_CEREBRI_SYNAPSE_TOPIC=y
+CONFIG_CEREBRI_CORE_COMMON=y
+CONFIG_CEREBRI_CORE_COMMON_BOOT_BANNER=y
 CONFIG_CEREBRI_SYNAPSE_ZROS=y
-CONFIG_SHELL_STACK_SIZE=8192
+
+CONFIG_SHELL_STACK_SIZE=10240
 CONFIG_INIT_STACKS=y
 
 CONFIG_LOG=y
-CONFIG_ASSERT=n
+CONFIG_LOG_CMDS=y
+CONFIG_LOG_MODE_DEFERRED=y
+
+CONFIG_ASSERT=y
+CONFIG_TEST=y
 CONFIG_CBPRINTF_FP_SUPPORT=y
 
 # modules
 CONFIG_SYNAPSE_PROTOBUF=y
 CONFIG_SYNAPSE_TINYFRAME=y
 CONFIG_NANOPB=y
-CONFIG_UBXLIB=y
+CONFIG_UBXLIB=n
 
 # Debug
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY_LOG_LEVEL_DBG=n
