--- a/lib/synapse/ethernet/CMakeLists.txt
+++ b/lib/synapse/ethernet/CMakeLists.txt
@@ -7,7 +7,7 @@ zephyr_library_named(cerebri_synapse_ethernet)
 zephyr_include_directories()
 
 zephyr_library_sources(
-  main.c
+  synapse_ethernet.c
   )
 
 add_dependencies(cerebri_synapse_ethernet synapse_protobuf)
