--- a/app/b3rb/sample.yaml
+++ b/app/b3rb/sample.yaml
@@ -8,7 +8,7 @@ tests:
     tags:
       - b3rb
     integration_platforms:
-      - native_posix
+      - native_sim
   b3rb.mr_canhubk3:
     tags:
       - b3rb
