--- a/app/elm4/sample.yaml
+++ b/app/elm4/sample.yaml
@@ -4,7 +4,7 @@ sample:
 common:
   build_only: true
   integration_platforms:
-    - native_posix
+    - native_sim
     - vmu_rt1170
 tests:
   elm4.default: {}
