Add GPS pub over ethernet.
Co-authored-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/b3rb/prj.conf
+++ b/app/b3rb/prj.conf
@@ -27,7 +27,7 @@ CONFIG_CEREBRI_SENSE_SAFETY=y
 CONFIG_CEREBRI_SENSE_IMU=y
 CONFIG_CEREBRI_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY=y
-CONFIG_CEREBRI_SENSE_UBX_GNSS=n
+CONFIG_CEREBRI_SENSE_UBX_GNSS=y
 
 CONFIG_CEREBRI_SYNAPSE_ETHERNET=y
 
@@ -51,7 +51,7 @@ CONFIG_CBPRINTF_FP_SUPPORT=y
 CONFIG_SYNAPSE_PROTOBUF=y
 CONFIG_SYNAPSE_TINYFRAME=y
 CONFIG_NANOPB=y
-CONFIG_UBXLIB=n
+CONFIG_UBXLIB=y
 
 # Debug
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY_LOG_LEVEL_DBG=n
