--- a/app/b3rb/boards/mr_canhubk3.conf
+++ b/app/b3rb/boards/mr_canhubk3.conf
@@ -5,6 +5,8 @@ CONFIG_CEREBRI_ACTUATE_PWM_NUMBER=2
 CONFIG_LED_STRIP=y
 CONFIG_APA102_STRIP=y
 
+CONFIG_ETH_NXP_S32_RX_RING_LEN=16
+
 # steering
 CONFIG_CEREBRI_ACTUATE_PWM_USE_POS_0=y
 CONFIG_CEREBRI_ACTUATE_PWM_INDEX_0=0
