--- a/app/b3rb/boards/native_sim.conf
+++ b/app/b3rb/boards/native_sim.conf
@@ -15,6 +15,8 @@ CONFIG_ASAN=n
 CONFIG_UBSAN=n
 
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=n
+CONFIG_CEREBRI_ACTUATE_SOUND=n
+CONFIG_CEREBRI_ACTUATE_PWM=n
 CONFIG_CEREBRI_SENSE_POWER=n
 CONFIG_CEREBRI_SENSE_IMU=n
 CONFIG_CEREBRI_SENSE_BARO=n
