--- a/lib/synapse/Kconfig
+++ b/lib/synapse/Kconfig
@@ -4,6 +4,8 @@
 menu "Synapse"
 
 rsource "zros/Kconfig"
+rsource "eth_tx/Kconfig"
+rsource "eth_rx/Kconfig"
 rsource "ethernet/Kconfig"
 rsource "topic/Kconfig"
 rsource "vesc_can/Kconfig"
