--- a/app/rdd2/prj.conf
+++ b/app/rdd2/prj.conf
@@ -1,29 +1,51 @@
-CONFIG_CEREBRI_APP_NAME="b3rb"
+CONFIG_CEREBRI_APP_NAME="rdd2"
 
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=10000
 CONFIG_TICKLESS_KERNEL=n
 
+CONFIG_CEREBRI_DREAM_SIL=n
+
+CONFIG_CEREBRI_RDD2_ESTIMATE=y
+CONFIG_CEREBRI_RDD2_FSM=y
+CONFIG_CEREBRI_RDD2_MANUAL=y
+CONFIG_CEREBRI_RDD2_MIXING=y
+CONFIG_CEREBRI_RDD2_POSITION=y
+CONFIG_CEREBRI_RDD2_VELOCITY=y
+CONFIG_CEREBRI_RDD2_LIGHTING=y
+CONFIG_CEREBRI_RDD2_CASADI=y
+
 CONFIG_CEREBRI_ACTUATE_PWM=y
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=y
-<<<<<<< HEAD
-=======
 CONFIG_CEREBRI_ACTUATE_SOUND=y
-CONFIG_CEREBRI_CONTROL_ACKERMANN=y
->>>>>>> eef1be4 (Initial sound and GNSS baud with M8/9/10 suppport.)
-CONFIG_CEREBRI_CORE_COMMON=y
-CONFIG_CEREBRI_CORE_COMMON_BOOT_BANNER=y
+
+CONFIG_NET_BUF_RX_COUNT=24
+CONFIG_NET_PKT_RX_COUNT=24
+
+CONFIG_CEREBRI_SENSE_POWER=y
+CONFIG_CEREBRI_SENSE_SAFETY=y
 CONFIG_CEREBRI_SENSE_IMU=y
 CONFIG_CEREBRI_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY=y
 CONFIG_CEREBRI_SENSE_UBX_GNSS=y
-CONFIG_CEREBRI_SYNAPSE_ETHERNET=y
+
+CONFIG_CEREBRI_SYNAPSE_ETH_RX=y
+CONFIG_CEREBRI_SYNAPSE_ETH_TX=y
+CONFIG_CEREBRI_SYNAPSE_ETHERNET=n
+
 CONFIG_CEREBRI_SYNAPSE_TOPIC=y
+CONFIG_CEREBRI_CORE_COMMON=y
+CONFIG_CEREBRI_CORE_COMMON_BOOT_BANNER=y
 CONFIG_CEREBRI_SYNAPSE_ZROS=y
-CONFIG_SHELL_STACK_SIZE=8192
+
+CONFIG_SHELL_STACK_SIZE=10240
 CONFIG_INIT_STACKS=y
 
 CONFIG_LOG=y
-CONFIG_ASSERT=n
+CONFIG_LOG_CMDS=y
+CONFIG_LOG_MODE_DEFERRED=y
+
+CONFIG_ASSERT=y
+CONFIG_TEST=y
 CONFIG_CBPRINTF_FP_SUPPORT=y
 
 # modules
@@ -43,7 +65,6 @@ CONFIG_NEWLIB_LIBC=y
 CONFIG_MAIN_THREAD_PRIORITY=5
 CONFIG_SYSTEM_WORKQUEUE_PRIORITY=-2
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=10000
-
 # Networking config
 CONFIG_NET_SHELL=y
 CONFIG_NETWORKING=y
