Move zros into module.
Signed-off-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/elm4/prj.conf
+++ b/app/elm4/prj.conf
@@ -6,7 +6,7 @@ CONFIG_CEREBRI_SENSE_IMU=y
 CONFIG_CEREBRI_SENSE_MAG=y
 CONFIG_CEREBRI_SYNAPSE_TOPIC=y
 CONFIG_CEREBRI_SYNAPSE_ETHERNET=y
-CONFIG_CEREBRI_SYNAPSE_ZROS=y
+CONFIG_ZROS=y
 
 CONFIG_LOG=y
 CONFIG_ASSERT=n
