--- a/tests/pubsub/prj.conf
+++ b/tests/pubsub/prj.conf
@@ -6,7 +6,7 @@ CONFIG_INIT_STACKS=y
 CONFIG_NO_OPTIMIZATIONS=n
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=10000
 CONFIG_TICKLESS_KERNEL=n
-CONFIG_CEREBRI_SYNAPSE_ZROS=y
+CONFIG_ZROS=y
 CONFIG_LOG_MODE_DEFERRED=y
 CONFIG_PUBSUB_LOG_LEVEL_DBG=y
 
