--- a/app/b3rb/prj.conf
+++ b/app/b3rb/prj.conf
@@ -35,7 +35,7 @@ CONFIG_CEREBRI_SYNAPSE_ETHERNET=n
 CONFIG_CEREBRI_SYNAPSE_TOPIC=y
 CONFIG_CEREBRI_CORE_COMMON=y
 CONFIG_CEREBRI_CORE_COMMON_BOOT_BANNER=y
-CONFIG_CEREBRI_SYNAPSE_ZROS=y
+CONFIG_ZROS=y
 
 CONFIG_SHELL_STACK_SIZE=10240
 CONFIG_INIT_STACKS=y
