--- a/lib/actuate/pwm/Kconfig
+++ b/lib/actuate/pwm/Kconfig
@@ -4,7 +4,7 @@
 menuconfig CEREBRI_ACTUATE_PWM
   bool "PWM"
   depends on PWM
-  depends on CEREBRI_SYNAPSE_ZROS
+  depends on ZROS
   help
     This option enables pwm actuators
 
