--- a/lib/sense/power/Kconfig
+++ b/lib/sense/power/Kconfig
@@ -3,7 +3,7 @@
 
 menuconfig CEREBRI_SENSE_POWER
   bool "Power"
-  depends on CEREBRI_SYNAPSE_ZROS
+  depends on ZROS
   help
     This option enables power sensor.
 
