--- a/lib/synapse/eth_rx/Kconfig
+++ b/lib/synapse/eth_rx/Kconfig
@@ -4,7 +4,7 @@
 config CEREBRI_SYNAPSE_ETH_RX
   bool "ethernet receive"	
   default y
-  depends on CEREBRI_SYNAPSE_ZROS
+  depends on ZROS
   help
     This option enables the synapse udp interface
 
