--- a/app/rdd2/prj.conf
+++ b/app/rdd2/prj.conf
@@ -11,6 +11,7 @@ CONFIG_CEREBRI_RDD2_MANUAL=y
 CONFIG_CEREBRI_RDD2_MIXING=y
 CONFIG_CEREBRI_RDD2_POSITION=y
 CONFIG_CEREBRI_RDD2_VELOCITY=y
+CONFIG_CEREBRI_RDD2_ATTITUDE=y
 CONFIG_CEREBRI_RDD2_LIGHTING=y
 CONFIG_CEREBRI_RDD2_CASADI=y
 
