--- a/app/rdd2/sample.yaml
+++ b/app/rdd2/sample.yaml
@@ -14,6 +14,11 @@ tests:
       - rdd2
     integration_platforms:
       - mr_canhubk3
+  rdd2.vmu_rt1170/mimxrt1176/cm7:
+    tags:
+      - rdd2
+    integration_platforms:
+      - vmu_rt1170/mimxrt1176/cm7
 
 
 
