Expose native api for SIL on zephyr process.
West format.

Signed-off-by: James Goppert <james.goppert@gmail.com>
Co-authored-by: Peter van der Perk <peter.vanderperk@nxp.com>
Co-authored-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/lib/dream/sil/CMakeLists.txt
+++ b/lib/dream/sil/CMakeLists.txt
@@ -6,7 +6,7 @@ zephyr_library_named(cerebri_dream_sil)
 # we need to be able to include generated header files
 zephyr_include_directories()
 
-set_source_files_properties(native_main.c
+set_source_files_properties(native_main.c zephyr_main.c
 PROPERTIES COMPILE_DEFINITIONS
   "NO_POSIX_CHEATS;_BSD_SOURCE;_DEFAULT_SOURCE"
 )
