Update board configs. And clean up b3rb pwm_enable.
Signed-off-by: James Goppert <james.goppert@gmail.com>
Co-authored-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/b3rb/boards/mr_canhubk3_s32k344.conf
+++ b/app/b3rb/boards/mr_canhubk3_s32k344.conf
@@ -1,7 +1,7 @@
 CONFIG_ENTROPY_GENERATOR=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 
-CONFIG_CEREBRI_ACTUATE_PWM_NUMBER=2
+CONFIG_CEREBRI_ACTUATE_PWM_NUMBER=3
 CONFIG_LED_STRIP=y
 CONFIG_APA102_STRIP=y
 
@@ -27,6 +27,13 @@ CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_1=717
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_DIV_1=1
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_1=25000
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_DIV_1=1
+
+# enable
+CONFIG_CEREBRI_ACTUATE_PWM_INDEX_2=0
+CONFIG_CEREBRI_ACTUATE_PWM_USE_NANO_SECONDS_2=y
+CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MIN_2=0
+CONFIG_CEREBRI_ACTUATE_PWM_PULSE_MAX_2=50000
+CONFIG_CEREBRI_ACTUATE_PWM_PULSE_CENTER_2=0
 
 CONFIG_PWM=y
 
