--- a/tests/pubsub/sample.yaml
+++ b/tests/pubsub/sample.yaml
@@ -14,11 +14,12 @@ tests:
       - pubsub
     integration_platforms:
       - vmu_rt1170/mimxrt1176/cm7
-  pubsub.mr_canhubk3:
+  pubsub.mr_canhubk3/s32k344:
     tags:
-      - pubsum
+      - pubsub
     integration_platforms:
-      - mr_canhubk3
+      - mr_canhubk3/s32k344
+
 
 
 
