--- a/app/rdd2/Kconfig
+++ b/app/rdd2/Kconfig
@@ -20,11 +20,11 @@ config CEREBRI_RDD2_LIGHTING
   help
     Enable lighting
 
-config CEREBRI_RDD2_MANUAL
-  bool "enable manual"
+config CEREBRI_RDD2_JOY
+  bool "enable joyh"
   depends on CEREBRI_RDD2_ALLOCATION
   help
-    Enable manual
+    Enable joy
 
 config CEREBRI_RDD2_ALLOCATION
   bool "enable mixing"
