Disable acro, move control to casadi
Disables acro mode, switches position control to cmd_vel,
getting ready for bezier auto.

Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/rdd2/Kconfig
+++ b/app/rdd2/Kconfig
@@ -20,8 +20,8 @@ config CEREBRI_RDD2_LIGHTING
   help
     Enable lighting
 
-config CEREBRI_RDD2_JOY
-  bool "enable joyh"
+config CEREBRI_RDD2_COMMAND
+  bool "enable command"
   depends on CEREBRI_RDD2_ALLOCATION
   help
     Enable joy
