--- a/app/rdd2/CMakeLists.txt
+++ b/app/rdd2/CMakeLists.txt
@@ -28,8 +28,8 @@ if (CONFIG_CEREBRI_RDD2_LIGHTING)
   list(APPEND SOURCE_FILES src/lighting.c)
 endif()
 
-if (CONFIG_CEREBRI_RDD2_JOY)
-  list(APPEND SOURCE_FILES src/joy.c)
+if (CONFIG_CEREBRI_RDD2_COMMAND)
+  list(APPEND SOURCE_FILES src/command.c)
 endif()
 
 if (CONFIG_CEREBRI_RDD2_POSITION)
