New mode and command source support. PWM topic added.
Co-authored-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>
Co-authored-by: : ksommerkohrt <90289409+ksommerkohrt@users.noreply.github.com>
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/b3rb/Kconfig
+++ b/app/b3rb/Kconfig
@@ -20,11 +20,11 @@ config CEREBRI_B3RB_LIGHTING
   help
     Enable lighting
 
-config CEREBRI_B3RB_MANUAL
-  bool "enable manual"
+config CEREBRI_B3RB_COMMAND
+  bool "enable command"
   depends on CEREBRI_B3RB_MIXING
   help
-    Enable manual
+    Enable command
 
 config CEREBRI_B3RB_MIXING
   bool "enable mixing"
