--- a/app/b3rb/boards/native_sim.conf
+++ b/app/b3rb/boards/native_sim.conf
@@ -14,8 +14,12 @@ CONFIG_CEREBRI_BOOT_BANNER=n
 CONFIG_CEREBRI_DREAM_SIL=y
 CONFIG_UBXLIB=n
 
-CONFIG_ASAN=n
+CONFIG_TEST=y
+CONFIG_ASAN=y
 CONFIG_UBSAN=n
+CONFIG_ASSERT=y
+CONFIG_ASSERT_LEVEL=2
+CONFIG_ASSERT_VERBOSE=y
 
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=n
 CONFIG_CEREBRI_ACTUATE_SOUND=n
