--- a/app/rdd2/prj.conf
+++ b/app/rdd2/prj.conf
@@ -18,35 +18,33 @@ CONFIG_CEREBRI_ACTUATE_LED_ARRAY_COUNT=36
 
 CONFIG_CEREBRI_ACTUATE_PWM=y
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=y
-CONFIG_CEREBRI_ACTUATE_SOUND=n
+CONFIG_CEREBRI_ACTUATE_SOUND=y
 
 CONFIG_NET_BUF_RX_COUNT=24
 CONFIG_NET_PKT_RX_COUNT=24
 
+CONFIG_CEREBRI_SENSE_JOY=y
 CONFIG_CEREBRI_SENSE_POWER=y
 CONFIG_CEREBRI_SENSE_SAFETY=y
 CONFIG_CEREBRI_SENSE_IMU=y
 CONFIG_CEREBRI_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_UBX_GNSS=y
 
+CONFIG_CEREBRI_RDD2_ESTIMATE_OFFBOARD_ODOMETRY=n
 CONFIG_CEREBRI_SYNAPSE_ETH_RX=y
 CONFIG_CEREBRI_SYNAPSE_ETH_TX=y
-CONFIG_CEREBRI_SYNAPSE_ETHERNET=n
 
 CONFIG_CEREBRI_SYNAPSE_TOPIC=y
 CONFIG_CEREBRI_CORE_COMMON=y
 CONFIG_CEREBRI_CORE_COMMON_BOOT_BANNER=n
 CONFIG_ZROS=y
-
 CONFIG_SHELL_STACK_SIZE=10240
 CONFIG_INIT_STACKS=y
 
 CONFIG_LOG=y
 CONFIG_LOG_CMDS=y
-CONFIG_LOG_MODE_DEFERRED=n
+CONFIG_LOG_MODE_DEFERRED=y
 
-CONFIG_ASSERT=y
-CONFIG_TEST=y
 CONFIG_CBPRINTF_FP_SUPPORT=y
 
 # modules
@@ -59,6 +57,7 @@ CONFIG_UBXLIB=y
 CONFIG_CEREBRI_RDD2_LOG_LEVEL_DBG=n
 CONFIG_CEREBRI_SENSE_IMU_LOG_LEVEL_DBG=n
 CONFIG_CEREBRI_SENSE_SAFETY_LOG_LEVEL_DBG=n
+CONFIG_CEREBRI_ACTUATE_PWM_LOG_LEVEL_DBG=n
 
 # General config
 CONFIG_POSIX_API=y
@@ -80,8 +79,7 @@ CONFIG_NET_STATISTICS=y
 CONFIG_NET_MGMT_EVENT_INFO=y
 CONFIG_NET_MGMT_EVENT_MONITOR=y
 CONFIG_NET_BUF_POOL_USAGE=y
-CONFIG_NET_DEBUG_NET_PKT_ALLOC=y
-CONFIG_NET_CONFIG_NEED_IPV4=y
+CONFIG_NET_DEBUG_NET_PKT_ALLOC=y CONFIG_NET_CONFIG_NEED_IPV4=y
 CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
 CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
 
