--- a/lib/core/common/CMakeLists.txt
+++ b/lib/core/common/CMakeLists.txt
@@ -3,9 +3,10 @@
 
 zephyr_library_named(cerebri_core_common)
 
-zephyr_include_directories()
-zephyr_library_include_directories()
+zephyr_include_directories(src)
+zephyr_library_include_directories(src)
 
 zephyr_library_sources(
   src/common.c
+  src/casadi/gen/common.c
   )
