--- a/app/b3rb/CMakeLists.txt
+++ b/app/b3rb/CMakeLists.txt
@@ -34,8 +34,8 @@ if (CONFIG_CEREBRI_B3RB_LIGHTING)
   list(APPEND SOURCE_FILES src/lighting.c)
 endif()
 
-if (CONFIG_CEREBRI_B3RB_MANUAL)
-  list(APPEND SOURCE_FILES src/manual.c)
+if (CONFIG_CEREBRI_B3RB_COMMAND)
+  list(APPEND SOURCE_FILES src/command.c)
 endif()
 
 if (CONFIG_CEREBRI_B3RB_POSITION)
