--- a/app/rdd2/boards/native_sim.conf
+++ b/app/rdd2/boards/native_sim.conf
@@ -1,3 +1,27 @@
+# gains
+CONFIG_CEREBRI_RDD2_THRUST_TRIM=21952
+CONFIG_CEREBRI_RDD2_THRUST_DELTA=19756
+
+
+CONFIG_CEREBRI_RDD2_ESTIMATE_OFFBOARD_ODOMETRY=y
+
+CONFIG_CEREBRI_RDD2_ROLL_KP=2000
+CONFIG_CEREBRI_RDD2_PITCH_KP=2000
+CONFIG_CEREBRI_RDD2_YAW_KP=1000
+
+CONFIG_CEREBRI_RDD2_ROLLRATE_KP=300
+CONFIG_CEREBRI_RDD2_PITCHRATE_KP=300
+CONFIG_CEREBRI_RDD2_YAWRATE_KP=300
+
+CONFIG_CEREBRI_RDD2_ROLLRATE_KI=50
+CONFIG_CEREBRI_RDD2_PITCHRATE_KI=50
+CONFIG_CEREBRI_RDD2_YAWRATE_KI=50
+
+CONFIG_CEREBRI_RDD2_ROLLRATE_IMAX=1000
+CONFIG_CEREBRI_RDD2_PITCHRATE_IMAX=1000
+CONFIG_CEREBRI_RDD2_YAWRATE_IMAX=1000
+
+# config
 CONFIG_ETH_NATIVE_POSIX=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=500
@@ -5,7 +29,12 @@ CONFIG_NATIVE_POSIX_SLOWDOWN_TO_REAL_TIME=n
 
 CONFIG_NO_OPTIMIZATIONS=y
 CONFIG_UART_NATIVE_POSIX=y
-CONFIG_LOG_BACKEND_NATIVE_POSIX=n
+
+CONFIG_REBOOT=n
+CONFIG_LOG_BACKEND_NATIVE_POSIX=y
+CONFIG_LOG_MODE_DEFERRED=n
+CONFIG_LOG_MODE_IMMEDIATE=y
+
 CONFIG_NATIVE_UART_0_ON_OWN_PTY=y
 CONFIG_NATIVE_UART_0_ON_STDINOUT=n
 CONFIG_NATIVE_UART_AUTOATTACH_DEFAULT_CMD="xterm -fa Monospcae -fs 12 -fg grey -bg black -T cerebri-shell -e screen %s &"
@@ -14,13 +43,18 @@ CONFIG_CEREBRI_BOOT_BANNER=n
 CONFIG_CEREBRI_DREAM_SIL=y
 CONFIG_UBXLIB=n
 
-CONFIG_ASAN=n
+CONFIG_TEST=y
+CONFIG_ASAN=y
 CONFIG_UBSAN=n
+CONFIG_ASSERT=y
+CONFIG_ASSERT_LEVEL=2
+CONFIG_ASSERT_VERBOSE=y
 
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=n
 CONFIG_CEREBRI_ACTUATE_SOUND=n
 CONFIG_CEREBRI_ACTUATE_PWM=n
 CONFIG_CEREBRI_SENSE_POWER=n
+CONFIG_CEREBRI_SENSE_JOY=n
 CONFIG_CEREBRI_SENSE_IMU=n
 CONFIG_CEREBRI_SENSE_BARO=n
 CONFIG_CEREBRI_SENSE_MAG=n
