--- a/lib/actuate/pwm/Kconfig
+++ b/lib/actuate/pwm/Kconfig
@@ -10,6 +10,11 @@ menuconfig CEREBRI_ACTUATE_PWM
 
 if CEREBRI_ACTUATE_PWM
 
+config CEREBRI_ACTUATE_PWM_SHELL
+  bool "Enable shell"
+  help
+    Enable shell
+
 config CEREBRI_ACTUATE_PWM_NUMBER
   int "Number of PWM actuators"
   default 1
@@ -31,6 +36,14 @@ config CEREBRI_ACTUATE_PWM_USE_NANO_SECONDS_0
   bool "Use nano seconds for PWM 0"
   help
     Enable to use nanoseconds for the pulse widths of PWM 0.
+
+config CEREBRI_ACTUATE_PWM_PULSE_DISARM_0
+  int "Disarm pulse width PWM 0"
+  default 1000
+  range 0 9999999
+  help
+    Disarmed pulse width in micro
+    (or nano if selected) seconds for PWM 0
 
 config CEREBRI_ACTUATE_PWM_PULSE_MIN_0
   int "Min pulse width PWM 0"
@@ -131,6 +144,14 @@ config CEREBRI_ACTUATE_PWM_USE_NANO_SECONDS_1
   help
     Enable to use nanoseconds for the pulse widths of PWM 1.
 
+config CEREBRI_ACTUATE_PWM_PULSE_DISARM_1
+  int "Disarm pulse width PWM 1"
+  default 1000
+  range 0 9999999
+  help
+    Disarmed pulse width in micro
+    (or nano if selected) seconds for PWM 1
+
 config CEREBRI_ACTUATE_PWM_PULSE_MIN_1
   int "Min pulse width PWM 1"
   default 1100
@@ -229,6 +250,14 @@ config CEREBRI_ACTUATE_PWM_USE_NANO_SECONDS_2
   bool "Use nano seconds for PWM 2"
   help
     Enable to use nanoseconds for the pulse widths of PWM 2.
+
+config CEREBRI_ACTUATE_PWM_PULSE_DISARM_2
+  int "Disarm pulse width PWM 2"
+  default 1000
+  range 0 9999999
+  help
+    Disarmed pulse width in micro
+    (or nano if selected) seconds for PWM 2
 
 config CEREBRI_ACTUATE_PWM_PULSE_MIN_2
   int "Min pulse width PWM 2"
@@ -329,6 +358,14 @@ config CEREBRI_ACTUATE_PWM_USE_NANO_SECONDS_3
   help
     Enable to use nanoseconds for the pulse widths of PWM 3.
 
+config CEREBRI_ACTUATE_PWM_PULSE_DISARM_3
+  int "Disarm pulse width PWM 3"
+  default 1000
+  range 0 9999999
+  help
+    Disarmed pulse width in micro
+    (or nano if selected) seconds for PWM 3
+
 config CEREBRI_ACTUATE_PWM_PULSE_MIN_3
   int "Min pulse width PWM 3"
   default 1100
@@ -427,6 +464,14 @@ config CEREBRI_ACTUATE_PWM_USE_NANO_SECONDS_4
   bool "Use nano seconds for PWM 4"
   help
     Enable to use nanoseconds for the pulse widths of PWM 4.
+
+config CEREBRI_ACTUATE_PWM_PULSE_DISARM_4
+  int "Disarm pulse width PWM 4"
+  default 1000
+  range 0 9999999
+  help
+    Disarmed pulse width in micro
+    (or nano if selected) seconds for PWM 4
 
 config CEREBRI_ACTUATE_PWM_PULSE_MIN_4
   int "Min pulse width PWM 4"
@@ -527,6 +572,14 @@ config CEREBRI_ACTUATE_PWM_USE_NANO_SECONDS_5
   help
     Enable to use nanoseconds for the pulse widths of PWM 5.
 
+config CEREBRI_ACTUATE_PWM_PULSE_DISARM_5
+  int "Disarm pulse width PWM 5"
+  default 1000
+  range 0 9999999
+  help
+    Disarmed pulse width in micro
+    (or nano if selected) seconds for PWM 5
+
 config CEREBRI_ACTUATE_PWM_PULSE_MIN_5
   int "Min pulse width PWM 5"
   default 1100
@@ -626,6 +679,14 @@ config CEREBRI_ACTUATE_PWM_USE_NANO_SECONDS_6
   help
     Enable to use nanoseconds for the pulse widths of PWM 6.
 
+config CEREBRI_ACTUATE_PWM_PULSE_DISARM_6
+  int "Disarm pulse width PWM 6"
+  default 1000
+  range 0 9999999
+  help
+    Disarmed pulse width in micro
+    (or nano if selected) seconds for PWM 6
+
 config CEREBRI_ACTUATE_PWM_PULSE_MIN_6
   int "Min pulse width PWM 6"
   default 1100
@@ -724,6 +785,14 @@ config CEREBRI_ACTUATE_PWM_USE_NANO_SECONDS_7
   bool "Use nano seconds for PWM 7"
   help
     Enable to use nanoseconds for the pulse widths of PWM 7.
+
+config CEREBRI_ACTUATE_PWM_PULSE_DISARM_7
+  int "Disarm pulse width PWM 7"
+  default 1000
+  range 0 9999999
+  help
+    Disarmed pulse width in micro
+    (or nano if selected) seconds for PWM 7
 
 config CEREBRI_ACTUATE_PWM_PULSE_MIN_7
   int "Min pulse width PWM 7"
