--- a/lib/sense/CMakeLists.txt
+++ b/lib/sense/CMakeLists.txt
@@ -2,9 +2,10 @@
 
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_BARO baro)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_IMU imu)
+add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_JOY joy)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_MAG mag)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_POWER power)
+add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_SAFETY safety)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_UBX_GNSS ubx_gnss)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY wheel_odometry)
-add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_SAFETY safety)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SYNAPSE_VESC_CAN_STATUS vesc_can_status)
