--- a/lib/sense/Kconfig
+++ b/lib/sense/Kconfig
@@ -5,11 +5,12 @@ menu "Sense"
 
 rsource "baro/Kconfig"
 rsource "imu/Kconfig"
+rsource "joy/Kconfig"
 rsource "mag/Kconfig"
 rsource "power/Kconfig"
+rsource "safety/Kconfig"
 rsource "ubx_gnss/Kconfig"
 rsource "vesc_can_status/Kconfig"
 rsource "wheel_odometry/Kconfig"
-rsource "safety/Kconfig"
 
 endmenu
