--- a/lib/sense/joy/CMakeLists.txt
+++ b/lib/sense/joy/CMakeLists.txt
@@ -1,13 +1,14 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library_named(cerebri_synapse_ethernet)
+zephyr_library_named(cerebri_sense_joy)
+
 
 # we need to be able to include generated header files
 zephyr_include_directories()
 
 zephyr_library_sources(
-  synapse_ethernet.c
+  main.c
   )
 
-add_dependencies(cerebri_synapse_ethernet synapse_protobuf)
+add_dependencies(cerebri_sense_joy synapse_protobuf)
