--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -64,6 +64,7 @@ CONFIG_CAN_FD_MODE=y
 CONFIG_SHELL_ARGC_MAX=72
 CONFIG_I2C=y
 CONFIG_SENSOR=y
+CONFIG_SENSOR_SHELL=y
 CONFIG_HEAP_MEM_POOL_SIZE=16384
 
 # Debugging
