--- a/app/rdd2/prj.conf
+++ b/app/rdd2/prj.conf
@@ -3,7 +3,14 @@ CONFIG_CEREBRI_APP_NAME="rdd2"
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=10000
 CONFIG_TICKLESS_KERNEL=n
 
+CONFIG_INPUT=y
+CONFIG_INPUT_EVENT_DUMP=n
+CONFIG_INPUT_SHELL=n
+CONFIG_INPUT_MODE_THREAD=y
+CONFIG_INPUT_THREAD_STACK_SIZE=2048
+
 CONFIG_CEREBRI_DREAM_SIL=n
+CONFIG_INPUT_SBUS_REPORT_FILTER=0
 
 CONFIG_CEREBRI_RDD2_ESTIMATE=y
 CONFIG_CEREBRI_RDD2_FSM=y
@@ -23,6 +30,7 @@ CONFIG_CEREBRI_ACTUATE_SOUND=n
 CONFIG_NET_BUF_RX_COUNT=24
 CONFIG_NET_PKT_RX_COUNT=24
 
+CONFIG_CEREBRI_SENSE_JOY=y
 CONFIG_CEREBRI_SENSE_POWER=y
 CONFIG_CEREBRI_SENSE_SAFETY=y
 CONFIG_CEREBRI_SENSE_IMU=y
@@ -30,7 +38,7 @@ CONFIG_CEREBRI_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_UBX_GNSS=y
 
 CONFIG_CEREBRI_SYNAPSE_ETH_RX=y
-CONFIG_CEREBRI_SYNAPSE_ETH_TX=y
+CONFIG_CEREBRI_SYNAPSE_ETH_TX=n
 CONFIG_CEREBRI_SYNAPSE_ETHERNET=n
 
 CONFIG_CEREBRI_SYNAPSE_TOPIC=y
@@ -59,6 +67,7 @@ CONFIG_UBXLIB=y
 CONFIG_CEREBRI_RDD2_LOG_LEVEL_DBG=n
 CONFIG_CEREBRI_SENSE_IMU_LOG_LEVEL_DBG=n
 CONFIG_CEREBRI_SENSE_SAFETY_LOG_LEVEL_DBG=n
+CONFIG_CEREBRI_ACTUATE_PWM_LOG_LEVEL_DBG=n
 
 # General config
 CONFIG_POSIX_API=y
@@ -80,8 +89,7 @@ CONFIG_NET_STATISTICS=y
 CONFIG_NET_MGMT_EVENT_INFO=y
 CONFIG_NET_MGMT_EVENT_MONITOR=y
 CONFIG_NET_BUF_POOL_USAGE=y
-CONFIG_NET_DEBUG_NET_PKT_ALLOC=y
-CONFIG_NET_CONFIG_NEED_IPV4=y
+CONFIG_NET_DEBUG_NET_PKT_ALLOC=y CONFIG_NET_CONFIG_NEED_IPV4=y
 CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
 CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
 
