Work on settings for rdd2.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -5,6 +5,15 @@ CONFIG_CEREBRI_ACTUATE_SOUND=y
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=y
 CONFIG_CEREBRI_SENSE_MAG_COUNT=2
 CONFIG_CEREBRI_SENSE_POWER=y
+CONFIG_CEREBRI_RDD2_MOTOR_L_MM=174
+CONFIG_CEREBRI_RDD2_MOTOR_CM=16000
+CONFIG_CEREBRI_RDD2_MOTOR_CT=16000
+
+CONFIG_CEREBRI_SYNAPSE_ETH_RX=n
+CONFIG_CEREBRI_SYNAPSE_ETH_TX=n
+CONFIG_CEREBRI_RDD2_POSITION=n
+CONFIG_CEREBRI_SENSE_UBX_GNSS=n
+CONFIG_CEREBRI_SENSE_MAG=n
 
 # ARM0
 CONFIG_CEREBRI_ACTUATE_PWM_INDEX_0=0
