--- a/app/rdd2/boards/native_sim.conf
+++ b/app/rdd2/boards/native_sim.conf
@@ -16,6 +16,7 @@ CONFIG_UBXLIB=n
 
 CONFIG_ASAN=n
 CONFIG_UBSAN=n
+#CONFIG_ASSERT=y
 
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=n
 CONFIG_CEREBRI_ACTUATE_SOUND=n
