--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -1,19 +1,47 @@
 CONFIG_CEREBRI_ACTUATE_PWM_NUMBER=4
-CONFIG_LED_STRIP=y
-CONFIG_APA102_STRIP=y
+
+CONFIG_ASSERT=n
+
+CONFIG_INPUT=y
+CONFIG_INPUT_EVENT_DUMP=n
+CONFIG_INPUT_SHELL=n
+CONFIG_INPUT_MODE_SYNCHRONOUS=y
+CONFIG_INPUT_SBUS_REPORT_FILTER=0
+#CONFIG_INPUT_THREAD_STACK_SIZE=2048
+
+# disabled for first live flight
+CONFIG_CEREBRI_ACTUATE_LED_ARRAY=n
+CONFIG_CEREBRI_ACTUATE_PWM=y
+CONFIG_CEREBRI_ACTUATE_PWM_SHELL=y
 CONFIG_CEREBRI_ACTUATE_SOUND=n
-CONFIG_CEREBRI_ACTUATE_LED_ARRAY=y
-CONFIG_CEREBRI_SENSE_MAG_COUNT=2
-CONFIG_CEREBRI_SENSE_POWER=y
-CONFIG_CEREBRI_RDD2_MOTOR_L_MM=20
-CONFIG_CEREBRI_RDD2_MOTOR_CM=20000
-CONFIG_CEREBRI_RDD2_MOTOR_CT=16000
+
+CONFIG_CEREBRI_RDD2_ALLOCATION=y
+CONFIG_CEREBRI_RDD2_ANGULAR_VELOCITY=y
+CONFIG_CEREBRI_RDD2_ATTITUDE=y
+CONFIG_CEREBRI_RDD2_COMMAND=y
+CONFIG_CEREBRI_RDD2_ESTIMATE=y
+CONFIG_CEREBRI_RDD2_FSM=y
+CONFIG_CEREBRI_RDD2_LIGHTING=n
+CONFIG_CEREBRI_RDD2_POSITION=n
+
+CONFIG_CEREBRI_SENSE_IMU=y
+CONFIG_CEREBRI_SENSE_MAG=n
+CONFIG_CEREBRI_SENSE_SAFETY=n
+CONFIG_CEREBRI_SENSE_UBX_GNSS=n
 
 CONFIG_CEREBRI_SYNAPSE_ETH_RX=n
 CONFIG_CEREBRI_SYNAPSE_ETH_TX=n
-CONFIG_CEREBRI_RDD2_POSITION=n
-CONFIG_CEREBRI_SENSE_UBX_GNSS=n
-CONFIG_CEREBRI_SENSE_MAG=n
+
+CONFIG_PWM=y
+
+CONFIG_LED_STRIP=y
+CONFIG_APA102_STRIP=y
+CONFIG_CEREBRI_ACTUATE_LED_ARRAY=y
+CONFIG_CEREBRI_SENSE_MAG_COUNT=2
+CONFIG_CEREBRI_SENSE_POWER=y
+CONFIG_CEREBRI_RDD2_MOTOR_L_MM=100
+CONFIG_CEREBRI_RDD2_MOTOR_CM=16000
+CONFIG_CEREBRI_RDD2_MOTOR_CT=8549
 
 # ARM0
 CONFIG_CEREBRI_ACTUATE_PWM_INDEX_0=0
@@ -54,8 +82,6 @@ CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_3=587
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_M_DIV_3=1000
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_3=1100
 CONFIG_CEREBRI_ACTUATE_PWM_LINEAR_B_DIV_3=1
-
-CONFIG_PWM=y
 
 CONFIG_CAN=y
 CONFIG_CAN_MAX_FILTER=5
