--- a/lib/core/common/CMakeLists.txt
+++ b/lib/core/common/CMakeLists.txt
@@ -4,8 +4,9 @@
 zephyr_library_named(cerebri_core_common)
 
 zephyr_include_directories()
-zephyr_library_include_directories()
+zephyr_library_include_directories(src)
 
 zephyr_library_sources(
   src/common.c
+  src/casadi/gen/common.c
   )
