--- a/west.yml
+++ b/west.yml
@@ -19,7 +19,7 @@ manifest:
     - name: zephyr
       remote: cognipilot
       west-commands: scripts/west-commands.yml
-      revision: 5b9e1e20bedab993ca6b958341bee977cbbab3b3 # pr-icm42688-fs 5/26/24
+      revision: eb8def4a69991f1bfc8e751ddcb7db52c2ff7d6a # clean_test 5/28/24
       import:
         - name-allowlist:
           - nanopb
